package com.javarush.island.ostapenko.controller;

public interface IControllerFacade {
 void run();
 void initializeCommandHandler();
}
